# epsilon

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-03-16-005145_create_epsilon_tables/: down.sql  up.sql
workspaces/api/: Cargo.toml
workspaces/api/src/: environment.rs  lib.rs
workspaces/api/src/routes/: analytics.rs  base.rs  mod.rs  statistics.rs  votes.rs
workspaces/cli/: Cargo.toml
workspaces/cli/src/: main.rs
workspaces/crawler/: Cargo.toml
workspaces/crawler/src/: crawler.rs  lib.rs  scraper.rs  utils.rs  website.rs  worker.rs
workspaces/database/: Cargo.toml
workspaces/database/src/: lib.rs  models.rs  schema.rs  types.rs
workspaces/favicons/: Cargo.toml
workspaces/favicons/src/: downloader.rs  favicons.rs  lib.rs  utils.rs
workspaces/indexer/: Cargo.toml
workspaces/indexer/src/: indexer.rs
workspaces/monitor/: Cargo.toml
workspaces/monitor/src/: monitor.rs
workspaces/utils/: Cargo.toml
workspaces/utils/src/: lib.rs  sql.rs  url.rs
