[workspace]
members = [
    "workspaces/api",
    "workspaces/cli",
    "workspaces/crawler",
    "workspaces/database",
    "workspaces/favicons",
    "workspaces/indexer",
    "workspaces/monitor",
    "workspaces/utils"
]
resolver = "2"

[profile.release]
opt-level = 3
panic = "unwind"
codegen-units = 1
lto = true