[package]
name = "favicons"
version = "1.0.0"
description = "The favicons manager"
authors = ["sodiumlabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
database = { path = "../database" }
utils = { path = "../utils" }
diesel = { version = "2.2.8", features = ["postgres"] }
reqwest = { version = "0.12.14", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
image = "0.25.6"

[lib]
name = "favicons"
path = "src/lib.rs"
