[package]
name = "indexer"
version = "1.0.0"
description = "The pages indexer"
authors = ["sodiumlabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
database = { path = "../database" }
utils = { path = "../utils" }
diesel = { version = "2.2.8", features = ["postgres"] }
reqwest = { version = "0.12.14", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
image = "0.25.6"

[lib]
name = "indexer"
path = "src/lib.rs"
