[package]
name = "monitor"
version = "1.0.0"
description = "The analytics and statistics monitor"
authors = ["sodiumlabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
database = { path = "../database" }
utils = { path = "../utils" }
diesel = { version = "2.2.8", features = ["postgres"] }
tokio = { version = "1.44.1", features = ["full"] }
sysinfo = "0.33.1"

[lib]
name = "monitor"
path = "src/lib.rs"
